--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="https://www.qyun.vip/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
-    <title>&柠的个人主页</title>
+    <title>阿维的个人主页</title>
 </head>
 
 <body>
@@ -103,7 +103,7 @@
                                 d="M542 767a15 15 0 0 1-13.996875-9.61875001l-72.60937501-188.77499998-188.77499998-72.60937501a15 15 0 0 1 0.66562499-28.2375l405-134.0625a15 15 0 0 1 18.94687499 18.99375l-135 404.0625A15 15 0 0 1 542.3375 767zM316.540625 483.059375l155.84062499 59.94375a15 15 0 0 1 8.61562501 8.61562501l60 156.01874999L653.28125001 371.590625z"
                                 fill="#333333" p-id="1554"></path>
                         </svg>
-                        <p>博客</p>
+                        <p>sp</p>
                     </a>
                 </div>
             </nav>
@@ -112,11 +112,11 @@
         <div class="page">
             <div class="content">
                 <div class="header">
-                    <img src="http://q.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=640&img_type=jpg" alt="">
+                    <img src="http://q.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=640&img_type=jpg" width="100%" alt="">
                 </div>
                 <div class="quote">
                     <i class="iconfont icon-Artboard1"></i>
-                    <strong>&柠</strong>
+                    <strong>&阿维</strong>
                     <strong>一条咸鱼 </strong>
                     <span>爱好计算机，小说，动漫，浪费时间最在行</span>
                     <i class="iconfont icon-Artboard"></i>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="markdown index">
                         <p>你可以认为我不好，但不代表我不好.</p>
-                        <p>其实我啊，不管是代码，还是身法，都不曾是黑客啊.</p>
+                        <p>其实我啊，不管是代码，还是身法，都不曾是啊.</p>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <p>
                             略懂PS PHP html；爱好折腾去解决一切问题
                         <p>
-                            伤感 看小说 看代码 等等
+                            伤感 看小说 网络男神 等等
                         <p>              
                         <p>个人QQ：2084944332<a href="链接" style="color:blue ;"></a></p>
                     </div>
