--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-title" content="个人主页">
-    <meta itemprop="name" content="我在人间凑数的日子">
+    <meta itemprop="name" content="我在人间深厚的日子">
     <meta name="apple-mobile-web-app-title" content="个人主页">
     <meta http-equiv="Cache-Control" content="no-siteapp">
     <meta name="author" content="个人主页">
@@ -112,7 +112,7 @@
         <div class="page">
             <div class="content">
                 <div class="header">
-                    <img src="http://q.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=640&img_type=jpg" width="100%" alt="">
+                    <img src="http://q.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=180&img_type=jpg" width="100%" alt="">
                 </div>
                 <div class="quote">
                     <i class="iconfont icon-Artboard1"></i>
