--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="page">
             <div class="content">
                 <div class="header">
-                    <img src="http://q.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=180&img_type=jpg" width="100%" alt="">
+                    <img src="http://q2.qlogo.cn/headimg_dl?dst_uin=2084944332&spec=100" width="100%" alt="">
                 </div>
                 <div class="quote">
                     <i class="iconfont icon-Artboard1"></i>
