--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 document.getElementById("about").style.display="none";
             }
         </script>
-
+<audio autoplay loop><source src="ltx.mp3"></audio>
 
 </body>
 
