--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="page">
             <div class="content">
                 <div class="header">
-                    <img src="https://q1.qlogo.cn/g?b=qq&nk=2084944332&s=640" width="100%" alt="">
+                    <img src="http://q1.qlogo.cn/g?b=qq&nk=2084944332&s=640" alt="">
                 </div>
                 <div class="quote">
                     <i class="iconfont icon-Artboard1"></i>
