--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 d="M542 767a15 15 0 0 1-13.996875-9.61875001l-72.60937501-188.77499998-188.77499998-72.60937501a15 15 0 0 1 0.66562499-28.2375l405-134.0625a15 15 0 0 1 18.94687499 18.99375l-135 404.0625A15 15 0 0 1 542.3375 767zM316.540625 483.059375l155.84062499 59.94375a15 15 0 0 1 8.61562501 8.61562501l60 156.01874999L653.28125001 371.590625z"
                                 fill="#333333" p-id="1554"></path>
                         </svg>
-                        <p>视频</p>
+                        <p>作品</p>
                     </a>
                 </div>
             </nav>
@@ -116,9 +116,9 @@
                 </div>
                 <div class="quote">
                     <i class="iconfont icon-Artboard1"></i>
-                    <strong>&阿维</strong>
+                    <strong>&维</strong>
                     <strong>一条咸鱼 </strong>
-                    <span>爱好计算机，小说，动漫，浪费时间最在行</span>
+                    <span>爱好iapp，小说，动漫，浪费时间最在行</span>
                     <i class="iconfont icon-Artboard"></i>
                 </div>
                 <div class="segment" style="border-color: rgb(245, 150, 170);" id="index">
@@ -126,8 +126,12 @@
                         <span>说说</span>
                     </div>
                     <div class="markdown index">
-                        <p>你可以认为我不好，但不代表我不好.</p>
-                        <p>其实我啊，不管是代码，还是身法，都不曾是啊.</p>
+                        <p>看清楚了 我不是他”.</p>
+                        <p>九幽有玄天，上玄下九幽
+勿约而自同，生死之昭彰
+摄阴半摄魂，无相亦无尚
+黑白终不化，气海挂灵堂
+神分脘建中，尾庭中堂宫.</p>
                     </div>
                 </div>
 
@@ -138,11 +142,9 @@
                     <div class="markdown" id="about">
 
                         <p>
-                            爱好，会去自学自己感兴趣的一切东西
+                           *你看到一个火堆，并坐下来休息，这使你充满了信心！———存档成功
                         <p>
-                            略懂PS PHP html；爱好折腾去解决一切问题
-                        <p>
-                            伤感 看小说 网络男神 等等
+                           看小说 
                         <p>              
                         <p>个人QQ：2084944332<a href="链接" style="color:blue ;"></a></p>
                     </div>
@@ -166,7 +168,7 @@
                         }
                         function show_date_time() {
                             window.setTimeout("show_date_time()", 1000);
-                            BirthDay = new Date("2020/11/30");
+                            BirthDay = new Date("2018/11/30");
                             today = new Date();
                             timeold = (today.getTime() - BirthDay.getTime());
                             sectimeold = timeold / 1000
