--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 d="M542 767a15 15 0 0 1-13.996875-9.61875001l-72.60937501-188.77499998-188.77499998-72.60937501a15 15 0 0 1 0.66562499-28.2375l405-134.0625a15 15 0 0 1 18.94687499 18.99375l-135 404.0625A15 15 0 0 1 542.3375 767zM316.540625 483.059375l155.84062499 59.94375a15 15 0 0 1 8.61562501 8.61562501l60 156.01874999L653.28125001 371.590625z"
                                 fill="#333333" p-id="1554"></path>
                         </svg>
-                        <p>作品</p>
+                        <p>更多</p>
                     </a>
                 </div>
             </nav>
@@ -118,7 +118,7 @@
                     <i class="iconfont icon-Artboard1"></i>
                     <strong>&维</strong>
                     <strong>一条咸鱼 </strong>
-                    <span>爱好iapp，小说，动漫，浪费时间最在行</span>
+                    <span>爱好学习，小说，动漫，浪费时间最在行</span>
                     <i class="iconfont icon-Artboard"></i>
                 </div>
                 <div class="segment" style="border-color: rgb(245, 150, 170);" id="index">
@@ -126,12 +126,8 @@
                         <span>说说</span>
                     </div>
                     <div class="markdown index">
-                        <p>看清楚了 我不是他”.</p>
-                        <p>九幽有玄天，上玄下九幽
-勿约而自同，生死之昭彰
-摄阴半摄魂，无相亦无尚
-黑白终不化，气海挂灵堂
-神分脘建中，尾庭中堂宫.</p>
+                        <p>轻舟已过万重山”.</p>
+                        <p>“初心如磐 笃行致远”</p>
                     </div>
                 </div>
 
