--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="css/style.css">
     <title>阿维的个人主页</title>
 </head>
-
+ <style>
+    body{
+background-image:url(https://api.xyttkx.cn/ecy.php);
+background-size:100%
+    </style>
 <body>
     <div id="bg">
         <div class="backstretch"></div>
