--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     
   <main class="astro-J7PV25F6">
-    <h1 class="astro-J7PV25F6">Hello  I'm </br><span class="text-gradient astro-J7PV25F6">江东cc </span></h1>
+    <h1 class="astro-J7PV25F6">Hello  I'm </br><span class="text-gradient astro-J7PV25F6">wecc </span></h1>
     <p class="instructions astro-J7PV25F6">
 <strong class="astro-J7PV25F6">漫山遍野你的脸庞 唯有遗忘是最漫长</strong>
 </p>
