--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
       }
     </style>
     <script src="../storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-    
+    <audio src="Duvet.mp3" autoplay>
+</audio>
   </main>
 
   </body></html>
