--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       }
     </style>
     <script src="../storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-    <audio src="Duvet.mp3" autoplay controls>
+    <audio src="Duvet.mp3" autoplay loop controls>
 </audio>
   </main>
 
