--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="flex h-full items-center justify-center">
     <div flex-1 flex="~ col gap-1">
       <div font-medium leading-relaxed flex items-center justify-between>
-        <span>待定</span>
+        <span>视频</span>
 <!-- <img h-full src={`ins.png`} alt="inscc.cc.png"> -->
 </div>
       <div op-50 font-normal text-sm>
