--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </p>
 
 
-</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f] hover:text-white" bg="gray-500/20 dark:gray-400/20" href="https://" target="_blank">
+</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-gradient-to-r from-[#fd5949] to-[#d6249f] hover:text-white" bg="gray-500/20 dark:gray-400/20" href="https://20849wei.github.io/awa/a.html" target="_blank">
   <div text-lg>
     <div class="i-ri-book-2-line"></div>
   </div>
