--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
   
-</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-[#00b0ff] hover:text-white" bg="gray-500/20 dark:gray-400/20" href="@qq.com" target="_blank">
+</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-[#00b0ff] hover:text-white" bg="gray-500/20 dark:gray-400/20" href="2084944332@qq.com" target="_blank">
   <div text-lg>
     <div class="i-ri-mail-fill"></div>
   </div>
@@ -42,7 +42,7 @@
       </div>
 
 
-</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-red-4 hover:text-white" bg="gray-500/20 dark:gray-400/20" href="https://20849wei.github.io/bk" target="_blank">
+</a><a class="inline-flex text-current px-3 py-2 mt-2 mr-2 rounded-md transition-colors decoration-none hover:bg-red-4 hover:text-white" bg="gray-500/20 dark:gray-400/20" href="http://20849wei.github.io/bk" target="_blank">
   <div text-lg>
     <div class="i-twemoji:money-bag"></div>
   </div>
