--- a/a.html
+++ b/a.html
@@ -62,7 +62,7 @@
       <div class="text-group">
         <p class="text-oops">Oops!被怪兽吞了!</p>
         <p class="countdown">{{count}}秒后自动跳转至首页</p>
-        <a class="go2index" href="/">去往首页</a>
+        <a class="go2index" href="http://20849wei.github.io/awa">去往首页</a>
       </div>
       <div class="svg">
         <svg
