--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <link rel="stylesheet" href="css/inscc.css" /><script type="module">kofiWidgetOverlay.draw("xhofe",{type:"floating-chat","floating-chat.donateButton.text":"Support Me","floating-chat.donateButton.background-color":"#00b9fe","floating-chat.donateButton.text-color":"#fff"});
 </script></head>
   <body>
-    
+     <style>
+    body{
+background-image:url("https://api.xyttkx.cn/ecy.php");
+background-size:100%}
+    </style>  
   <main class="astro-J7PV25F6">
     <h1 class="astro-J7PV25F6">Hello  I'm </br><span class="text-gradient astro-J7PV25F6">wecc </span></h1>
     <p class="instructions astro-J7PV25F6">
