--- a/b.html
+++ b/b.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>介绍</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f4f4f4;
+      padding: 1rem;
+    }
+    nav {
+      display: flex;
+      justify-content: space-around;
+      background-color: #e0e0e0;
+      padding: 1rem;
+    }
+    nav a {
+      color: #333;
+      text-decoration: none;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      background-color: #f4f4f4;
+      padding: 1rem;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>介绍</h1>
+  </header>
+  <nav>
+    <a href="#">主页</a>
+    <a href="#">关于</a>
+    <a href="#">联系我们</a>
+  </nav>
+  <main>
+    <h2>欢迎来到@潍的网站</h2>
+    <p>本人喜欢看小说，写html,iapp,js,lua,不常在线</p>
+    <p>联系q2084944332</p>
+  </main>
+  <footer>
+    <p>&copy; 2023 归awer 版权所有。</p>
+  </footer>
+</body>
+</html>
