--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ width:100%;
     <button>欢迎来到w的主页~~</button>
      <button onclick="ok();">介绍</button>
      <button onclick="sp();">视频</button>
+<a href="https://20849wei.github.io/bk">赞赏</a>
     </body>
     <script>
     function ok(){
