--- a/b.html
+++ b/b.html
@@ -45,8 +45,8 @@
     <a href="#">联系我们</a>
   </nav>
   <main>
-    <h2>欢迎来到@潍的网站</h2>
-    <p>本人喜欢看小说，写html,iapp,js,lua,不常在线</p>
+    <h2>欢迎来到@way的网站</h2>
+    <p>本人喜欢看小说，写html,不常在线</p>
     <p>联系q2084944332</p>
   </main>
   <footer>
