--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body> 
     <style>
     body{
-background-image:url("https://api.xyttkx.cn/ecy.php");
+background-image:url(".mp3");
 background-size:100%}
 button{
 width:100%;
