--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body> 
     <style>
     body{
-background-image:url(".mp3");
+background-image:url("http://lx.linxi.icu/API/meitui.php");
 background-size:100%}
 button{
 width:100%;
