--- a/index.html
+++ b/index.html
@@ -1,52 +1,18 @@
-
-<!-- 个人主页：简cc -->
 <!doctype html>
 <html>
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
-        <title>个人主页</title>
-    </head> 
-    <body> 
-    <style>
-    body{
-background-image:url("");
-background-size:100%}
-button{
-width:100%;
-
-}
-    </style> 
-    <button>欢迎来到w的主页~~</button>
-     <button onclick="ok();">介绍</button>
-     <button onclick="sp();">视频</button>
-<a href="https://20849wei.github.io/bk">赞赏</a>
-    </body>
-    <script>
-    function ok(){
-    if (prompt("欢迎来到主页,请输入密码")=="2084"){
-    alert("密码正确")
-    js()
-}else{
-    alert("密码错误")
-    ok()
-}
-}
-    function js(){
-        window.open("http://20849wei.github.io/awa/b.html")
-}
-
-function sp(){
-    if (prompt("欢迎来到主页,请输入密码")=="yyds"){
-    alert("密码正确")
-    spp()
-}else{
-    alert("密码错误")
-    sp()
-    }
-    }
-    function spp(){
-    window.open("http://20849wei.github.io/bk/a.html")
-}
-    </script>
+  <head> 
+	<meta charset="UTF-8"> 
+	<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1"> 
+	<title>个人主页</title>
+  </head> 
+  <body> 
+<hr/>
+<ul>
+<a href="http://20849wei.github.io/awa/b.html">
+<li  >介绍</li>
+</a>
+<p>终不似当年模样</p>
+</ul>
+<hr/>
+  </body>
 </html>
