--- a/b.html
+++ b/b.html
@@ -41,7 +41,7 @@
   </header>
   <nav>
     <a href="#">主页</a>
-    <a href="#">关于</a>
+    <a href="https://20849wei.github.io/awa/a.html">关于</a>
     <a href="#">联系我们</a>
   </nav>
   <main>
