--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 	<meta charset="UTF-8"> 
 	<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1"> 
 	<title>个人主页</title>
+       <style>
+    body{
+background-image:url("https://api.xyttkx.cn/ecy.php");
+background-size:100%}
+button{
+width:100%;
+
+}
+    </style> 
   </head> 
   <body> 
 <hr/>
