--- a/b.html
+++ b/b.html
@@ -42,7 +42,7 @@
   <nav>
     <a href="#">主页</a>
     <a href="https://20849wei.github.io/awa/a.html">关于</a>
-    <a href="#">联系我们</a>
+    <a href="https://20849wei.github.io/bk">联系我们</a>
   </nav>
   <main>
     <h2>欢迎来到@way的网站</h2>
