--- a/b.html
+++ b/b.html
@@ -50,7 +50,7 @@
     <p>联系q2084944332</p>
   </main>
   <footer>
-    <p>&copy; 2023 归awer 版权所有。</p>
+    <p>&copy; 2023 </p>
   </footer>
 </body>
 </html>
