--- a/b.html
+++ b/b.html
@@ -52,5 +52,8 @@
   <footer>
     <p>&copy; 2023 </p>
   </footer>
+<div id="xf-MusicPlayer" data-cdnName="https://player.xfyun.club/js"  data-themeColor="xf-sky" data-songChart="热歌榜"data-fadeOutAutoplay data-memory="1" data-random="true"></div>
+<script src="https://player.xfyun.club/js/xf-MusicPlayer/js/xf-MusicPlayer.min.js"></script>
+
 </body>
 </html>
