--- a/b.html
+++ b/b.html
@@ -45,7 +45,7 @@
     <a href="https://20849wei.github.io/bk">联系我们</a>
   </nav>
   <main>
-    <h2>欢迎来到@way的网站</h2>
+    <h2>欢迎光临🥰</h2>
     <p>本人喜欢看小说，写html,不常在线</p>
     <p>联系q2084944332</p>
   </main>
