--- a/b.html
+++ b/b.html
@@ -40,7 +40,7 @@
     <h1>介绍</h1>
   </header>
   <nav>
-    <a href="#">主页</a>
+    <a href="http://20849wei.github.io/bk.sp.html">🥳</a>
     <a href="https://20849wei.github.io/awa/a.html">关于</a>
     <a href="https://20849wei.github.io/bk">联系我们</a>
   </nav>
