--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>个人主页</title>
        <style>
     body{
-background-image:url("https://api.xyttkx.cn/ecy.php");
+background-image:url("https://sjtp.api.mofashi.ltd/api.php");
 background-size:100%}
 button{
 width:100%;
