--- a/b.html
+++ b/b.html
@@ -42,7 +42,7 @@
   <nav>
     <a href="http://20849wei.github.io/bk/sp.html">🥳</a>
     <a href="https://20849wei.github.io/awa/a.html">关于</a>
-    <a href="https://20849wei.github.io/bk">联系我们</a>
+    <a href="https://20849wei.github.io/bk">赞赏</a>
   </nav>
   <main>
     <h2>欢迎光临🥰</h2>
