--- a/b.html
+++ b/b.html
@@ -46,8 +46,8 @@
   </nav>
   <main>
     <h2>欢迎光临🥰</h2>
-    <p>本人喜欢看小说，写html,不常在线</p>
-    <p>联系q2084944332</p>
+    <dd>那些年立下的FLAG自己删了吧，<br>反正也没人记得。<br>
+             联系:<br>q2084944332</dd>
   </main>
   <footer>
     <p>&copy; 2023 </p>
