--- a/b.html
+++ b/b.html
@@ -40,9 +40,9 @@
     <h1>介绍</h1>
   </header>
   <nav>
-    <a href="http://20849wei.github.io/bk/sp.html">🥳</a>
+    <a href="http://20849wei.github.io/bk/sp.html">介绍</a>
     <a href="https://20849wei.github.io/awa/a.html">关于</a>
-    <a href="https://20849wei.github.io/bk">赞赏</a>
+    <a href="https://20849wei.github.io/bk">更多</a>
   </nav>
   <main>
     <h2>欢迎光临🥰</h2>
