--- a/b.html
+++ b/b.html
@@ -46,8 +46,8 @@
   </nav>
   <main>
     <h2>欢迎光临🥰</h2>
-    <dd>那些年立下的FLAG自己删了吧，<br>反正也没人记得。<br>
-             联系:<br>q2084944332</dd>
+    <p>我提示一下，这个网站属于网站<br>反正也没人记得。<br>
+             联系q2084944332</p>
   </main>
   <footer>
     <p>&copy; 2023 </p>
