--- a/b.html
+++ b/b.html
@@ -46,7 +46,7 @@
   </nav>
   <main>
     <h2>欢迎光临🥰</h2>
-    <p>我提示一下，这个网站属于网站<br>联系q2084944332</p>
+    <p>我提示一下，这个网站属于网站<br>联系2084944332</p>
   </main>
   <footer>
     <p>&copy; 2023 </p>
